@@ -372,3 +372,6 @@ Changes only in Hortonworks github and not in hadoop-2.6.0 and hence not covered
     fail to tell the DFSClient about it because of a network error. (Colin
     Patrick McCabe)
 
+    HDFS-8070. Pre-HDFS-7915 DFSClient cannot use short circuit on
+    post-HDFS-7915 DataNode. (Colin Patrick McCabe)
+
